Fix icon on mobile view

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -102,7 +102,7 @@
 
     .homepage-icon {
         border-radius: 10px;
-        width: 45px;
-        height: 45px;
+        width: 35px;
+        height: 35px;
     }
 }
